--- a/flux/helmgit-charts.yaml
+++ b/flux/helmgit-charts.yaml
@@ -16,3 +16,23 @@ spec:
       interval: 1m
   values:
     replicaCount: 2
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: prometheus
+  namespace: default
+spec:
+  interval: 1m
+  chart:
+    spec:
+      chart: fantastic-charts/kube-prometheus-stack
+      #version: '4.0.x'
+      sourceRef:
+        kind: GitRepository
+        name: helmgitrepo
+        namespace: flux-system
+      interval: 1m
+  values:
+    replicaCount: 2
+---
