helmgit-charts-updatd

--- a/flux/helmgit-prom.yaml
+++ b/flux/helmgit-prom.yaml
@@ -1,13 +1,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: nginx
+  name: prometheus
   namespace: default
 spec:
   interval: 1m
   chart:
     spec:
-      chart: fantastic-charts/ingress-nginx
+      chart: fantastic-charts/kube-prometheus-stack
       #version: '4.0.x'
       sourceRef:
         kind: GitRepository
